fix(responsive-design): Update author position on smaller screens.

--- a/src/app/styles/article.css
+++ b/src/app/styles/article.css
@@ -57,3 +57,15 @@
     transition-timing-function: var(--default-transition-timing-function); /* cubic-bezier(0.4, 0, 0.2, 1) */
     transition-duration: var(--default-transition-duration); /* 150ms */
 }
+
+@media (max-width: 640px) {
+    .article-synopsis-wrapper {
+        flex-direction: column;
+        align-items: end;
+    }
+
+    .article-author {
+        align-self: end;
+        margin-right: 0.625rem;
+    }
+}
